Fixed row gap

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   justify-content: center;
   background-color: #111;
+  padding: 3rem;
 }
 
 .container {
@@ -31,9 +32,9 @@ body {
   width: 100%;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
   flex-wrap: wrap;
   padding: 5rem;
+  height: 50%;
 }
 
 .track {
